--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -21,6 +21,8 @@
             android:layout_height="wrap_content"
             android:alpha="0.8"
             android:layout_margin="1dp"
+            android:layout_marginRight="3dp"
+            android:padding="3dp"
             android:layout_gravity="center"
             android:src="@drawable/baseline_arrow_back_24"
             android:background="@android:color/transparent"/>
