--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -3,21 +3,22 @@
     android:layout_width="match_parent"
     android:layout_height="200dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:background="@color/greenish"
-    android:gravity="bottom"
     android:padding="5dp">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        app:cardCornerRadius="40dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        app:cardCornerRadius="50dp"
+        android:layout_gravity="center"
+        android:layout_marginLeft="5dp"
         app:cardElevation="1dp"
         android:backgroundTint="#D1D1D1">
 
         <ImageView
-            android:layout_width="75dp"
-            android:layout_height="75dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:layout_gravity="center"
             android:alpha="0.9"
             android:padding="2dp"
@@ -25,21 +26,33 @@
 
     </androidx.cardview.widget.CardView>
 
-    <TextView
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="5dp"
-        android:textStyle="bold"
-        android:textSize="18sp"
-        android:text="Username"/>
+        android:layout_margin="10dp"
+        android:layout_gravity="center"
+        android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:textStyle="bold"
-        android:textSize="15sp"
-        android:text="e-mail"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="2dp"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:text="Username"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="2dp"
+            android:textStyle="bold"
+            android:textSize="18sp"
+            android:text="e-mail"/>
+
+    </LinearLayout>
+
+
 
 
 
