--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,15 +1,13 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.IntelliChatCC" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.IntelliChatCC" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your light theme here. -->
-        <item name="android:statusBarColor">@android:color/transparent</item>
+<!--        <item name="android:statusBarColor">@android:color/transparent</item>-->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
+
+
     <style name="Theme.IntelliChatCC" parent="Base.Theme.IntelliChatCC" />
 
-    <style name="ThemeOverlay.IntelliChatCC.FullscreenContainer" parent="">
-        <item name="fullscreenBackgroundColor">@color/light_blue_600</item>
-        <item name="fullscreenTextColor">@color/light_blue_A200</item>
-    </style>
 </resources>
