--- a/app/src/main/res/layout/activity_search_user.xml
+++ b/app/src/main/res/layout/activity_search_user.xml
@@ -1,76 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:padding="5dp"
+    android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context=".SearchUserActivity">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/search_toolbar"
-        android:padding="10dp">
-
-        <TextView
-            android:id="@+id/search_user"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Search User"
-            android:textStyle="bold"
-            android:layout_marginStart="5dp"
-            android:layout_toRightOf="@+id/back_btn"
-            android:textSize="22sp"
-            android:layout_centerVertical="true"/>
-
-        <ImageButton
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginEnd="5dp"
-            android:src="@drawable/baseline_arrow_back_24"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:layout_centerVertical="true"
-            android:id="@+id/back_btn" />
-    </RelativeLayout>
+    <include
+        layout="@layout/appbar"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/search_toolbar"
-        android:id="@+id/search_username"
-        android:layout_margin="10dp">
+        android:layout_height="wrap_content">
 
-        <EditText
-            android:id="@+id/searchUsernameEdt"
+        <RelativeLayout
+            android:id="@+id/search_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_toLeftOf="@id/searchUserBtn"
-            android:background="@drawable/edt_text_rounded_corner"
-            android:elevation="5dp"
-            android:hint="Username"
+            android:layout_marginBottom="10dp">
+
+            <EditText
+                android:id="@+id/searchUsernameEdt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_toLeftOf="@id/searchUserBtn"
+                android:background="@drawable/edt_text_rounded_corner"
+                android:elevation="5dp"
+                android:hint="Username"
+                android:padding="10dp" />
+
+            <ImageButton
+                android:id="@+id/searchUserBtn"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:alpha="0.7"
+                android:background="@drawable/search_alt_2_svgrepo_com" />
+        </RelativeLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/userSearchResult"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/search_username"
             android:padding="10dp" />
 
-        <ImageButton
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:id="@+id/searchUserBtn"
-            android:alpha="0.7"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:background="@drawable/search_alt_2_svgrepo_com" />
     </RelativeLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/userSearchResult"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/search_username"
-        android:padding="10dp" />
 
 
-</RelativeLayout>
+
+
+</LinearLayout>
