--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,13 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/charcoal"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
     <include
         layout="@layout/appbar" />
-
-
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -21,6 +20,8 @@
             <com.google.android.material.tabs.TabLayout
                 android:id="@+id/tabLayout"
                 android:layout_width="match_parent"
+                app:tabTextColor="@color/white"
+                app:tabIndicatorColor="@color/white"
                 android:layout_height="match_parent">
 
                 <com.google.android.material.tabs.TabItem
