--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -11,15 +11,10 @@
         android:orientation="vertical">
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recylcerViewFragmentChat"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="8dp"/>
-
-        <include layout="@layout/recent_chat_fragment"/>
-        <include layout="@layout/recent_chat_fragment"/>
-        <include layout="@layout/recent_chat_fragment"/>
-        <include layout="@layout/recent_chat_fragment"/>
-
     </LinearLayout>
 
 </FrameLayout>
