--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -21,7 +21,36 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="3dp"
-            android:layout_above="@id/bottom_chat_layout"/>
+            android:layout_above="@id/smartReplyerLinearLayout"/>
+
+        <LinearLayout
+            android:id="@+id/smartReplyerLinearLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:visibility="gone"
+            android:layout_above="@id/bottom_chat_layout">
+
+            <ImageView
+                android:layout_gravity="center"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/edit_pen_white"
+                />
+
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/smart_reply_recycler_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"/>
+
+        </LinearLayout>
+
+
+
+
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -31,6 +60,16 @@
             android:paddingBottom="5dp"
             android:paddingStart="3dp"
             android:layout_alignParentBottom="true">
+
+            <ImageView
+                android:id="@+id/smartReplyBtn"
+                android:layout_gravity="center"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_margin="3dp"
+                android:src="@drawable/edit_pen_white" />
+
+
 
             <EditText
                 android:id="@+id/messageBoxChat"
