--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/charcoal"
     tools:context=".SplashActivity">
 
     <LinearLayout
@@ -17,13 +18,15 @@
             android:id="@+id/splash_image"
             android:layout_width="300dp"
             android:layout_height="300dp"
-            android:src="@drawable/splash"
+            android:padding="35dp"
+            android:src="@drawable/chat_app_icon"
             android:scaleType="fitCenter"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Intelli-Chat"
+            android:textColor="@color/white"
             android:textSize="25sp"
             android:layout_margin="10dp"
             android:padding="8dp"
